// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TestStatusChoiceGroup render: status is set to FAIL 1`] = `
<ChoiceGroupPassFail
  isLabelVisible={false}
  onChange={[Function]}
  onUndoClickedPassThrough={[Function]}
  options={
    [
      {
        "key": 0,
        "text": "Pass",
      },
      {
        "key": 2,
        "text": "Fail",
      },
    ]
  }
  selectedKey={2}
/>
`;

exports[`TestStatusChoiceGroup render: status is set to PASS 1`] = `
<ChoiceGroupPassFail
  isLabelVisible={false}
  onChange={[Function]}
  onUndoClickedPassThrough={[Function]}
  options={
    [
      {
        "key": 0,
        "text": "Pass",
      },
      {
        "key": 2,
        "text": "Fail",
      },
    ]
  }
  selectedKey={0}
/>
`;

exports[`TestStatusChoiceGroup render: status is set to UNKNOWN 1`] = `
<ChoiceGroupPassFail
  isLabelVisible={false}
  onChange={[Function]}
  onUndoClickedPassThrough={[Function]}
  options={
    [
      {
        "key": 0,
        "text": "Pass",
      },
      {
        "key": 2,
        "text": "Fail",
      },
    ]
  }
  selectedKey={1}
/>
`;
